--- a/readme.html
+++ b/readme.html
@@ -5,248 +5,314 @@
   <title>BooleanGamesPWA — Guida</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-      line-height: 1.6;
-      margin: 2rem auto;
-      max-width: 900px;
-      padding: 0 1rem;
-      color: #222;
-    }
-    h1, h2, h3 { color: #0055a5; }
-    code {
-      background: #f4f4f4;
-      padding: 2px 5px;
-      border-radius: 4px;
-      font-family: monospace;
-    }
-    pre {
-      background: #f9f9f9;
-      padding: 1rem;
-      border-radius: 5px;
-      overflow-x: auto;
-      font-family: monospace;
-    }
-    a {
-      color: #0055a5;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
+    :root{ --text:#1f2937; --muted:#4b5563; --link:#0b5cab; --bg:#ffffff; --code:#f6f8fa; --border:#e5e7eb; }
+    *{ box-sizing:border-box }
+    body{ margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; background:var(--bg); color:var(--text); }
+    .container{ max-width: 920px; margin: 0 auto; padding: 24px 16px 80px; }
+    h1{ font-size: 28px; margin: 0 0 16px; }
+    h2{ font-size: 22px; margin: 28px 0 12px; }
+    h3{ font-size: 18px; margin: 22px 0 8px; }
+    p{ margin: 10px 0; line-height: 1.7; }
+    ul,ol{ margin: 8px 0 16px 24px; }
+    li{ margin: 6px 0; }
+    a{ color:var(--link); text-decoration:none; }
+    a:hover{ text-decoration:underline; }
+    pre{ background:var(--code); padding: 12px; border-radius: 8px; overflow:auto; border:1px solid var(--border); }
+    code{ background:var(--code); padding: 2px 6px; border-radius: 4px; }
+    table{ width:100%; border-collapse:collapse; margin: 12px 0 18px; }
+    th,td{ border:1px solid var(--border); padding:8px; text-align:center; }
+    thead th{ background:#f3f4f6; }
+    hr{ border:none; border-top:1px solid var(--border); margin:24px 0; }
+    .topbar{ position: sticky; top:0; backdrop-filter: blur(6px); background: rgba(255,255,255,0.8); border-bottom:1px solid var(--border); padding:10px 0; margin-bottom: 12px; }
+    .topbar .container{ padding-top: 0; padding-bottom: 0; display:flex; justify-content: space-between; align-items:center; gap:12px; }
+    .btn{ display:inline-block; padding:8px 12px; border-radius:8px; border:1px solid var(--border); background:#fff; }
+    .btn:hover{ background:#f8fafc; }
   </style>
 </head>
 <body>
-<article>
-<h1>BooleanGamesPWA — Imparare la logica come giocare con i LEGO
+  <div class="topbar">
+    <div class="container">
+      <strong>BooleanGamesPWA — Guida</strong>
+      <span>
+        <a class="btn" href="https://www.alessandropezzali.it/BooleanGamesPWA/" target="_blank">Gioca ora</a>
+      </span>
+    </div>
+  </div>
+  <main class="container">
+    <h1>BooleanGamesPWA — Imparare la logica come giocare con i LEGO</h1>
 
-👉 Gioca subito online: <https://www.alessandropezzali.it/BooleanGamesPWA/>
+<p>👉 **Gioca subito online:** **&lt;https://www.alessandropezzali.it/BooleanGamesPWA/&gt;**</p>
 
-BooleanGamesPWA trasforma la logica booleana in sei mini-giochi.  
-Pensa alla logica come ai LEGO: pochi pezzi semplici (1/0, vero/falso) che, incastrati, costruiscono cose potenti.  
-Non servono conoscenze pregresse: clicca, prova, osserva. L’obiettivo è coltivare la capacità di imparare ad imparare.
+<p>BooleanGamesPWA trasforma la logica booleana in **sei mini-giochi**.  </p>
+<p>Pensa alla logica come ai **LEGO**: pochi pezzi semplici (1/0, vero/falso) che, incastrati, costruiscono cose potenti.  </p>
+<p>Non servono conoscenze pregresse: **clicca, prova, osserva**. L’obiettivo è coltivare la capacità di **imparare ad imparare**.</p>
 
----
+<p>---</p>
 
-<h2>🧭 Come iniziare (subito)
-<br>• Apri il link sopra e scegli un gioco dal menu.<br>• Ogni gioco ha pulsanti Nuovo / Hint / Check / Soluzione (quando presenti) e un feedback immediato.<br>• Se qualcosa sembra “non cambiarsi”, aggiorna la pagina con Cmd+Shift+R (macOS) o Ctrl+F5 (Windows).
+<h2>🧭 Come iniziare (subito)</h2>
 
----
+<ul>
+<li>Apri il link sopra e scegli un gioco dal menu.</li>
+<li>Ogni gioco ha pulsanti **Nuovo / Hint / Check / Soluzione** (quando presenti) e un **feedback immediato**.</li>
+<li>Se qualcosa sembra “non cambiarsi”, aggiorna la pagina con **Cmd+Shift+R** (macOS) o **Ctrl+F5** (Windows).</li>
+</ul>
+<p>---</p>
 
-<h2>🧱 Legenda completa dei simboli (i nostri “LEGO”)
+<h2>🧱 Legenda completa dei simboli (i nostri “LEGO”)</h2>
 
-<h3> Valori logici
+<h3>Valori logici</h3>
 
-<pre>| Notazione | Significato | Metafora |</pre>
-|---|---|---|
-<pre>| <code>1<code>, vero, true | acceso | lampadina accesa |
-| <code>0<code>, falso, false | spento | lampadina spenta |</pre>
+<table>
+<thead><tr><th>Notazione</th><th>Significato</th><th>Metafora</th></tr></thead>
+<tbody>
+<tr><td>`1`, **vero**, **true**</td><td>acceso</td><td>lampadina accesa</td></tr>
+<tr><td>`0`, **falso**, **false**</td><td>spento</td><td>lampadina spenta</td></tr>
+</tbody>
+</table>
+<h3>Variabili</h3>
+<ul>
+<li>**A, B, C, D**: interruttori che possono valere 0 o 1.</li>
+</ul>
+<h3>Operatori (con verità-table)</h3>
 
-<h3> Variabili<br>• A, B, C, D: interruttori che possono valere 0 o 1.
+<p>&gt; Nelle tabelle: **1**=vero, **0**=falso</p>
 
-<h3> Operatori (con verità-table)
+<p>**NOT (negazione)** — `¬X`  </p>
+<p>Inverte il valore.</p>
 
-> Nelle tabelle: 1=vero, 0=falso
+<table>
+<thead><tr><th>X</th><th>¬X</th></tr></thead>
+<tbody>
+<tr><td>0</td><td>1</td></tr>
+<tr><td>1</td><td>0</td></tr>
+</tbody>
+</table>
+<p>**AND (e logico)** — `X ∧ Y`  </p>
+<p>Vero **solo** se entrambi sono veri.</p>
 
-NOT (negazione) — <code>¬X<code>  
-Inverte il valore.
+<table>
+<thead><tr><th>X</th><th>Y</th><th>X ∧ Y</th></tr></thead>
+<tbody>
+<tr><td>0</td><td>0</td><td>0</td></tr>
+<tr><td>0</td><td>1</td><td>0</td></tr>
+<tr><td>1</td><td>0</td><td>0</td></tr>
+<tr><td>1</td><td>1</td><td>1</td></tr>
+</tbody>
+</table>
+<p>**OR (o logico)** — `X ∨ Y`  </p>
+<p>Vero se **almeno uno** è vero.</p>
 
-<pre>| X | ¬X |</pre>
-|---|---|
-<pre>| 0 | 1 |
-| 1 | 0 |</pre>
+<table>
+<thead><tr><th>X</th><th>Y</th><th>X ∨ Y</th></tr></thead>
+<tbody>
+<tr><td>0</td><td>0</td><td>0</td></tr>
+<tr><td>0</td><td>1</td><td>1</td></tr>
+<tr><td>1</td><td>0</td><td>1</td></tr>
+<tr><td>1</td><td>1</td><td>1</td></tr>
+</tbody>
+</table>
+<p>**XOR (o esclusivo)** — `X ⊕ Y`  </p>
+<p>Vero se **esattamente uno** è vero.</p>
 
-AND (e logico) — <code>X ∧ Y<code>  
-Vero solo se entrambi sono veri.
+<table>
+<thead><tr><th>X</th><th>Y</th><th>X ⊕ Y</th></tr></thead>
+<tbody>
+<tr><td>0</td><td>0</td><td>0</td></tr>
+<tr><td>0</td><td>1</td><td>1</td></tr>
+<tr><td>1</td><td>0</td><td>1</td></tr>
+<tr><td>1</td><td>1</td><td>0</td></tr>
+</tbody>
+</table>
+<p>**Implica** — `X → Y`  </p>
+<p>Falso **solo** se X=1 e Y=0; altrimenti vero.</p>
 
-<pre>| X | Y | X ∧ Y |</pre>
-|---|---|---|
-<pre>| 0 | 0 | 0 |
-| 0 | 1 | 0 |
-| 1 | 0 | 0 |
-| 1 | 1 | 1 |</pre>
+<table>
+<thead><tr><th>X</th><th>Y</th><th>X → Y</th></tr></thead>
+<tbody>
+<tr><td>0</td><td>0</td><td>1</td></tr>
+<tr><td>0</td><td>1</td><td>1</td></tr>
+<tr><td>1</td><td>0</td><td>0</td></tr>
+<tr><td>1</td><td>1</td><td>1</td></tr>
+</tbody>
+</table>
+<p>**Suggerimenti di lettura**</p>
+<ul>
+<li>Priorità tipica: `¬` &gt; `∧` &gt; `∨` &gt; `⊕` &gt; `→`.  </li>
+<li>Usa **parentesi** per evitare ambiguità, es.: `(A ∧ B) → ¬C`.</li>
+</ul>
+<h3>Mappe di Karnaugh (K-map) — etichette in **Gray code**</h3>
+<ul>
+<li>**3 variabili** (A; BC in colonne): colonne ordinate **00, 01, 11, 10**  </li>
+<li>**4 variabili** (AB righe; CD colonne): righe **00, 01, 11, 10** e colonne **00, 01, 11, 10**  </li>
+</ul>
+<p>&gt; Il Gray code cambia **un solo bit alla volta** tra celle adiacenti: utile per “vedere” pattern.</p>
 
-OR (o logico) — <code>X ∨ Y<code>  
-Vero se almeno uno è vero.
+<p>---</p>
 
-<pre>| X | Y | X ∨ Y |</pre>
-|---|---|---|
-<pre>| 0 | 0 | 0 |
-| 0 | 1 | 1 |
-| 1 | 0 | 1 |
-| 1 | 1 | 1 |</pre>
+<h2>🎮 I giochi (istruzioni + esempio + obiettivo didattico)</h2>
 
-XOR (o esclusivo) — <code>X ⊕ Y<code>  
-Vero se esattamente uno è vero.
+<h3>1) 🧮 Verità o Falso — Valutare una formula</h3>
+<p>**Obiettivo**: decidere se una formula è vera o falsa con i valori dati.</p>
 
-<pre>| X | Y | X ⊕ Y |</pre>
-|---|---|---|
-<pre>| 0 | 0 | 0 |
-| 0 | 1 | 1 |
-| 1 | 0 | 1 |
-| 1 | 1 | 0 |</pre>
-
-Implica — <code>X → Y<code>  
-Falso solo se X=1 e Y=0; altrimenti vero.
-
-<pre>| X | Y | X → Y |</pre>
-|---|---|---|
-<pre>| 0 | 0 | 1 |
-| 0 | 1 | 1 |
-| 1 | 0 | 0 |
-| 1 | 1 | 1 |</pre>
-
-Suggerimenti di lettura<br>• Priorità tipica: <code>¬<code> > <code>∧<code> > <code>∨<code> > <code>⊕<code> > <code>→<code>.  <br>• Usa parentesi per evitare ambiguità, es.: <code>(A ∧ B) → ¬C<code>.
-
-<h3> Mappe di Karnaugh (K-map) — etichette in Gray code<br>• 3 variabili (A; BC in colonne): colonne ordinate 00, 01, 11, 10  <br>• 4 variabili (AB righe; CD colonne): righe 00, 01, 11, 10 e colonne 00, 01, 11, 10  
-> Il Gray code cambia un solo bit alla volta tra celle adiacenti: utile per “vedere” pattern.
-
----
-
-<h2>🎮 I giochi (istruzioni + esempio + obiettivo didattico)
-
-<h3> 1) 🧮 Verità o Falso — Valutare una formula
-Obiettivo: decidere se una formula è vera o falsa con i valori dati.
-
-Come si gioca
-1. Click Nuovo (appare una formula e un’assegnazione di A,B,C).  
-2. Sostituisci i valori nella formula.  
-3. Valuta passo passo (usa la legenda sopra).  
-4. Premi Vero o Falso.  
-5. Hint mostra la formula annotata con 0/1.
-
-Esempio
-<pre>
+<p>**Come si gioca**</p>
+<ol>
+<li>Click **Nuovo** (appare una formula e un’assegnazione di A,B,C).  </li>
+<li>Sostituisci i valori nella formula.  </li>
+<li>Valuta passo passo (usa la legenda sopra).  </li>
+<li>Premi **Vero** o **Falso**.  </li>
+<li>**Hint** mostra la formula annotata con 0/1.</li>
+</ol>
+<p>**Esempio**</p>
+<pre><code>
 Formula: (A ∧ B) → ¬C
 Valori:  A=1, B=0, C=1
 
 (1 ∧ 0) = 0
 ¬C = ¬1 = 0
 (0 → 0) = 1 ⇒ Vero
-<pre>
+</code></pre>
 
-Cosa impari: lettura, sostituzione, valutazione — la “grammatica” della logica.
+<p>**Cosa impari**: lettura, sostituzione, valutazione — la “grammatica” della logica.</p>
 
----
+<p>---</p>
 
-<h3> 2) 🗺️ K-map (3 variabili) — Vedere la funzione su una mappa
-Obiettivo: riempire la griglia 2×4 (A; BC) con 0/1 per matchare la funzione mostrata.
+<h3>2) 🗺️ K-map (3 variabili) — Vedere la funzione su una mappa</h3>
+<p>**Obiettivo**: riempire la griglia 2×4 (A; BC) con 0/1 per **matchare** la funzione mostrata.</p>
 
-Come si gioca
-1. Nuovo → funzione casuale (es. <code>A ∧ C<code>).  
-2. Clicca le celle per impostare 0/1.  
-3. Check mostra quante celle coincidono.  
-4. Hint corregge una cella. Soluzione compila tutto. Pulisci resetta.
+<p>**Come si gioca**</p>
+<ol>
+<li>**Nuovo** → funzione casuale (es. `A ∧ C`).  </li>
+<li>Clicca le celle per impostare 0/1.  </li>
+<li>**Check** mostra quante celle coincidono.  </li>
+<li>**Hint** corregge una cella. **Soluzione** compila tutto. **Pulisci** resetta.</li>
+</ol>
+<p>**Esempio**</p>
+<ul>
+<li>Funzione `A ∧ C` → metti **1** in tutte le celle dove **A=1** e **C=1** (secondo le etichette A/BC della griglia).  </li>
+</ul>
+<p>**Cosa impari**: trasformare una formula astratta in una **mappa visiva**.</p>
 
-Esempio<br>• Funzione <code>A ∧ C<code> → metti 1 in tutte le celle dove A=1 e C=1 (secondo le etichette A/BC della griglia).  
+<p>---</p>
 
-Cosa impari: trasformare una formula astratta in una mappa visiva.
+<h3>3) 🧩 SAT 3-CNF — Rendere vere tutte le clausole</h3>
+<p>**Obiettivo**: trovare A,B,C che rendano **tutte** le clausole vere.</p>
 
----
+<p>**Come si gioca**</p>
+<ol>
+<li>**Nuovo** → elenco di clausole tipo `(A ∨ ¬B ∨ C)`.  </li>
+<li>Attiva/disattiva i checkbox **A**, **B**, **C**.  </li>
+<li>Le clausole diventano **verdi** quando soddisfatte.  </li>
+<li>**Hint** imposta automaticamente una variabile corretta. **Reset** azzera.</li>
+</ol>
+<p>**Esempio**</p>
+<ul>
+<li>Clausole: `(A ∨ ¬B ∨ C)`, `(¬A ∨ C ∨ B)`  </li>
+<li>Prova **A=1, B=0, C=1** → entrambe vere → **risolto**.</li>
+</ul>
+<p>**Cosa impari**: problem solving con **tentativi informati** (osserva il feedback).</p>
 
-<h3> 3) 🧩 SAT 3-CNF — Rendere vere tutte le clausole
-Obiettivo: trovare A,B,C che rendano tutte le clausole vere.
+<p>---</p>
 
-Come si gioca
-1. Nuovo → elenco di clausole tipo <code>(A ∨ ¬B ∨ C)<code>.  
-2. Attiva/disattiva i checkbox A, B, C.  
-3. Le clausole diventano verdi quando soddisfatte.  
-4. Hint imposta automaticamente una variabile corretta. Reset azzera.
+<h3>4) 🗺️ K-map (4 variabili) — Stesse regole, scala maggiore</h3>
+<p>**Obiettivo**: riempire la **griglia 4×4** (AB; CD) secondo la funzione data.</p>
 
-Esempio<br>• Clausole: <code>(A ∨ ¬B ∨ C)<code>, <code>(¬A ∨ C ∨ B)<code>  <br>• Prova A=1, B=0, C=1 → entrambe vere → risolto.
+<p>**Come si gioca**</p>
+<ol>
+<li>**Nuovo** → funzione su A,B,C,D.  </li>
+<li>Clicca le celle 0/1.  </li>
+<li>Usa **Check / Hint / Soluzione / Pulisci** come guida.</li>
+</ol>
+<p>**Esempio**</p>
+<ul>
+<li>Funzione `B ∨ D` → metti **1** dove **B=1** o **D=1** (riga/colonna in Gray).</li>
+</ul>
+<p>**Cosa impari**: **generalizzazione** e riconoscimento di **pattern** più estesi.</p>
 
-Cosa impari: problem solving con tentativi informati (osserva il feedback).
+<p>---</p>
 
----
+<h3>5) 🧠 Quine–McCluskey — Semplificare (pensiero essenziale)</h3>
+<p>**Obiettivo**: ridurre una funzione alla **forma minima**.</p>
 
-<h3> 4) 🗺️ K-map (4 variabili) — Stesse regole, scala maggiore
-Obiettivo: riempire la griglia 4×4 (AB; CD) secondo la funzione data.
+<p>**Come si gioca**</p>
+<ol>
+<li>**Nuovo (3 o 4 variabili)** → appaiono i **minterms**.  </li>
+<li>**Mostra passaggi** → vedi gruppi, implicanti primi, essenziali, copertura minima.  </li>
+<li>Leggi la **formula minimale**.</li>
+</ol>
+<p>**Esempio (2 variabili)**</p>
+<ul>
+<li>Vera nei casi 01 e 11 → espressione completa: `(¬A ∧ B) ∨ (A ∧ B)`  </li>
+<li>Forma minima: **`B`** (se B=1, il risultato è 1 indipendentemente da A).</li>
+</ul>
+<p>**Cosa impari**: togliere il superfluo, capire la **struttura**.</p>
 
-Come si gioca
-1. Nuovo → funzione su A,B,C,D.  
-2. Clicca le celle 0/1.  
-3. Usa Check / Hint / Soluzione / Pulisci come guida.
+<p>---</p>
 
-Esempio<br>• Funzione <code>B ∨ D<code> → metti 1 dove B=1 o D=1 (riga/colonna in Gray).
+<h3>6) 🔌 Circuiti logici — Costruire con blocchi (AND/OR/NOT/XOR)</h3>
+<p>**Obiettivo**: comporre porte logiche, osservare l’uscita e la **tabella di verità** in tempo reale.</p>
 
-Cosa impari: generalizzazione e riconoscimento di pattern più estesi.
+<p>**Come si gioca**</p>
+<ol>
+<li>**+AND/OR/NOT/XOR** → crea un blocco (es. **G1**).  </li>
+<li>Imposta gli ingressi del blocco (A/B/C/D o l’uscita di un altro blocco).  </li>
+<li>In basso scegli **Output osservato** (es. G1).  </li>
+<li>Attiva/spegni A/B/C/D → aggiornamento **live** di uscita e tabella.  </li>
+<li>**Reset** pulisce tutto.</li>
+</ol>
+<p>**Esempio**</p>
+<ul>
+<li>G1 = **AND(A, B)**  </li>
+<li>Con A=1 e B=1 → uscita=1; se uno è 0 → uscita=0.  </li>
+<li>Aggiungi G2 = **XOR(G1, C)** → componi logiche più ricche.</li>
+</ul>
+<p>**Cosa impari**: dal simbolo al circuito, **pensiero compositivo**.</p>
 
----
+<p>---</p>
 
-<h3> 5) 🧠 Quine–McCluskey — Semplificare (pensiero essenziale)
-Obiettivo: ridurre una funzione alla forma minima.
+<h2>🛣️ Percorsi consigliati (per tutti i livelli)</h2>
 
-Come si gioca
-1. Nuovo (3 o 4 variabili) → appaiono i minterms.  
-2. Mostra passaggi → vedi gruppi, implicanti primi, essenziali, copertura minima.  
-3. Leggi la formula minimale.
+<ul>
+<li>**Principiante (15–20 min)** → Verità o Falso → SAT  </li>
+<li>**Pratico (30 min)** → K-map 3v → K-map 4v  </li>
+<li>**Curioso/Avanzato (45–60+ min)** → Quine–McCluskey → Circuiti</li>
+</ul>
+<p>---</p>
 
-Esempio (2 variabili)<br>• Vera nei casi 01 e 11 → espressione completa: <code>(¬A ∧ B) ∨ (A ∧ B)<code>  <br>• Forma minima: <code>B<code> (se B=1, il risultato è 1 indipendentemente da A).
+<h2>❓ FAQ rapide</h2>
 
-Cosa impari: togliere il superfluo, capire la struttura.
+<ul>
+<li>**Non capisco i simboli.**  </li>
+</ul>
+<p>  Guarda la **Legenda** sopra e le **tabelle di verità**: sono il tuo “foglio di comandi”.</p>
 
----
+<ul>
+<li>**La pagina non si aggiorna.**  </li>
+</ul>
+<p>  Fai **Cmd+Shift+R** (macOS) o **Ctrl+F5** (Windows). Su sito HTTPS il service worker aggiorna in automatico, ma a volte serve un hard refresh.</p>
 
-<h3> 6) 🔌 Circuiti logici — Costruire con blocchi (AND/OR/NOT/XOR)
-Obiettivo: comporre porte logiche, osservare l’uscita e la tabella di verità in tempo reale.
+<ul>
+<li>**Posso usarlo in classe?**  </li>
+</ul>
+<p>  Sì. Proposta: 10′ di Verità/Falso condiviso, poi gruppi su K-map, chiusura con un circuito semplice costruito insieme.</p>
 
-Come si gioca
-1. +AND/OR/NOT/XOR → crea un blocco (es. G1).  
-2. Imposta gli ingressi del blocco (A/B/C/D o l’uscita di un altro blocco).  
-3. In basso scegli Output osservato (es. G1).  
-4. Attiva/spegni A/B/C/D → aggiornamento live di uscita e tabella.  
-5. Reset pulisce tutto.
+<p>---</p>
 
-Esempio<br>• G1 = AND(A, B)  <br>• Con A=1 e B=1 → uscita=1; se uno è 0 → uscita=0.  <br>• Aggiungi G2 = XOR(G1, C) → componi logiche più ricche.
+<h2>📚 Glossario essenziale</h2>
 
-Cosa impari: dal simbolo al circuito, pensiero compositivo.
+<ul>
+<li>**Variabile**: interruttore che vale 0/1.  </li>
+<li>**Funzione**: regola che, dati gli interruttori, produce 0/1.  </li>
+<li>**Minterm**: combinazione specifica di variabili per cui la funzione vale 1.  </li>
+<li>**K-map**: mappa che mostra dove la funzione vale 1 (etichette in Gray).  </li>
+<li>**Implicante primo / essenziale**: “blocchi” indispensabili nella forma minima.  </li>
+<li>**Forma minima**: modo più corto e chiaro di scrivere la stessa funzione.</li>
+</ul>
+<p>---</p>
 
----
+<h2>🧾 Licenza</h2>
 
-<h2>🛣️ Percorsi consigliati (per tutti i livelli)
-<br>• Principiante (15–20 min) → Verità o Falso → SAT  <br>• Pratico (30 min) → K-map 3v → K-map 4v  <br>• Curioso/Avanzato (45–60+ min) → Quine–McCluskey → Circuiti
-
----
-
-<h2>❓ FAQ rapide
-<br>• Non capisco i simboli.  
-  Guarda la Legenda sopra e le tabelle di verità: sono il tuo “foglio di comandi”.
-<br>• La pagina non si aggiorna.  
-  Fai Cmd+Shift+R (macOS) o Ctrl+F5 (Windows). Su sito HTTPS il service worker aggiorna in automatico, ma a volte serve un hard refresh.
-<br>• Posso usarlo in classe?  
-  Sì. Proposta: 10′ di Verità/Falso condiviso, poi gruppi su K-map, chiusura con un circuito semplice costruito insieme.
-
----
-
-<h2>📚 Glossario essenziale
-<br>• Variabile: interruttore che vale 0/1.  <br>• Funzione: regola che, dati gli interruttori, produce 0/1.  <br>• Minterm: combinazione specifica di variabili per cui la funzione vale 1.  <br>• K-map: mappa che mostra dove la funzione vale 1 (etichette in Gray).  <br>• Implicante primo / essenziale: “blocchi” indispensabili nella forma minima.  <br>• Forma minima: modo più corto e chiaro di scrivere la stessa funzione.
-
----
-
-<h2>🧾 Licenza
-
-Software rilasciato con licenza MIT.  
-Se insegni, traduci, migliori: condividi. La cultura cresce se si costruisce insieme, un mattoncino alla volta.
-</article>
+<p>Software rilasciato con licenza **MIT**.  </p>
+<p>Se insegni, traduci, migliori: **condividi**. La cultura cresce se si costruisce insieme, **un mattoncino alla volta**.</p>
+  </main>
 </body>
 </html>
