--- a/index.html
+++ b/index.html
@@ -213,6 +213,17 @@
           </ol>
           <p><strong>Esempio.</strong> Clausole: <span class="mono">(A ∨ ¬B ∨ C)</span>, <span class="mono">(¬A ∨ B ∨ C)</span>. Con <span class="mono">A=1, B=0, C=1</span> entrambe sono vere.</p>
         </details>
+        <details class="guide">
+          <summary>🧭 Guida rapida + Legenda</summary>
+          <ul>
+            <li><b>Verde</b> = clausola vera; <b>nessun colore</b> = clausola falsa.</li>
+            <li>Ogni clausola <span class="mono">(X ∨ Y ∨ Z)</span> è vera se almeno uno dei tre è vero.</li>
+            <li><span class="mono">¬A</span> significa “NON A” (inverte A).</li>
+            <li><span class="mono">Hint</span> imposta una variabile al valore giusto della soluzione nascosta.</li>
+            <li><span class="mono">Reset</span> rimette A=B=C=0.</li>
+          </ul>
+          <p><b>Esempio veloce.</b> Clausola <span class="mono">(A ∨ ¬B ∨ C)</span>: è vera se <span class="mono">A=1</span> o <span class="mono">B=0</span> o <span class="mono">C=1</span>.</p>
+        </details>
       </div>
     </section>
 
@@ -284,6 +295,16 @@
             <li><strong>Traduci</strong> le maschere in termini: 1 = variabile, 0 = negazione, - = assente. Es.: <span class="mono">01-1</span> → <span class="mono">¬A ∧ B ∧ D</span>.</li>
           </ol>
           <p><strong>Mini-esempio (3 variabili):</strong> minterms {1,3,5,7} → implicanti <span class="mono">-1-</span> e <span class="mono">--1</span> → forma minima <span class="mono">B ∨ C</span>.</p>
+        </details>
+        <details class="guide">
+          <summary>🧭 Guida rapida + Legenda</summary>
+          <p><b>Minterm</b> = numero della riga (in binario) in cui l’uscita vale 1.</p>
+          <ul>
+            <li>Raggruppa per numero di 1 → combina quelli che differiscono per un solo bit.</li>
+            <li>Una maschera <span class="mono">-1-0</span> significa: “B=1, D=0, gli altri non contano”.</li>
+            <li>Traduzione: 1 → variabile, 0 → negazione, - → assente.</li>
+          </ul>
+          <p><b>Esempio flash (3v):</b> minterms {1,3} → maschera <span class="mono">-1-</span> → forma minima <span class="mono">B</span>.</p>
         </details>
       </div>
     </section>
